gccida/g0/compute_use_by_pseudos
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1026:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+28h] [rbp-18h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1026:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1026:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+28h] [rbp-18h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1027:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+30h] [rbp-10h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1027:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1027:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+30h] [rbp-10h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1033:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1037:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1041:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ <= 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1043:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1043:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1044:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1048:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1050:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~( 1LL << bit_num_); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1051:41: error: invalid suffix 'xnum_' on integer constant
regno = ( ( 2 * ptr_->indx + *(short *)0xnum_) << 6) + bit_num_; 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1075:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v2 = mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[regno] + 2)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1076:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[regno] + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1091:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1098:14: error: invalid suffix 'xnum_' on integer constant
++*(short *)0xnum_; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/reload1.c:1100:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/compute_use_by_pseudos/src/obj/reload1.o] Error 1
